Revision history for Dist-Zilla-Plugin-GenerateFile-ShareDir

{{$NEXT}}
          - fix pod errors

0.005     2014-01-14 05:38:04Z
          - remove code in test templates that required perl 5.16

0.004     2014-01-12 21:10:11Z
          - specify minimum Path::Tiny version needed for slurp_raw
          - fix test that broke with Dist::Zilla 5.010, where internal testing
            zillas have no $VERSION

0.003     2013-12-08 17:34:21Z
          - bump prereq for MooseX::SlurpyConstructor to bypass old metaclass
            issues

0.002     2013-10-20 23:35:59Z
          - new "encoding" option - works with versions of Dist::Zilla both
            before and after 5.000

0.001     2013-10-12 18:05:08Z
          - Initial release.